--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 	    <div id="zoom5" class="zoomProps">
 	        <div class="polaroid">
-	            <img src="images/5. kadaster.JPG" alt="" width="200" height="200" />
+	            <img src="images/5. kadaster.jpg" alt="" width="200" height="200" />
 	            <span>Kadaster</span>
 	        </div>
 	    </div>
